--- a/aura/configuration/binoc/CMakeLists.txt
+++ b/aura/configuration/binoc/CMakeLists.txt
@@ -2,8 +2,11 @@ mk_paths()
 
 file(MAKE_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${mk_relpath})
 
+add_subdirectory(binocnetwork)
+
+if(varBuildBinOC)
 add_subdirectory(binaryoutcast)
 add_subdirectory(binocglobal)
-add_subdirectory(binocnetwork)
 add_subdirectory(newtobinparadigm)
 add_subdirectory(royalgeekworld)
+endif()
