[BUILD] Futureproof for more servers

--- a/aura/CMakeLists.txt
+++ b/aura/CMakeLists.txt
@@ -2,15 +2,15 @@ mk_paths()
 
 # Set variables about the build
 ### Which configuration do we build?
-set(varBuildBinOC 1)
-set(varBuildMCP)
+set(varTargetServerQuartz 1)
+set(varTargetServerRegolith)
 
 ### Server Specific Info
-if(varBuildBinOC)
+if(varTargetServerQuartz)
 	set(varSystemIPv4 "173.44.61.231")
 	set(varSystemIPv6 "2607:ff48:1:302::dc50:5a24")
 	set(varSystemServerName "quartz.server.binocnetwork.com")
-elseif(varBuildMCP)
+elseif(varTargetServerRegolith)
 	set(varSystemIPv4 "173.44.61.210")
 	set(varSystemIPv6 "2607:ff48:1:302::53cf:d149")
 	set(varSystemServerName "regolith.server.binocnetwork.com")
