--- a/aura/configuration/binoc/CMakeLists.txt
+++ b/aura/configuration/binoc/CMakeLists.txt
@@ -4,7 +4,7 @@ file(MAKE_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${mk_relpath})
 
 add_subdirectory(binocnetwork)
 
-if(varBuildBinOC)
+if(varTargetServerQuartz)
 add_subdirectory(binaryoutcast)
 add_subdirectory(binocglobal)
 add_subdirectory(newtobinparadigm)
