--- a/aura/configuration/system/CMakeLists.txt
+++ b/aura/configuration/system/CMakeLists.txt
@@ -2,7 +2,9 @@ mk_paths()
 
 file(MAKE_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${mk_relpath})
 
-add_subdirectory(bind)
+if(varTargetServerQuartz)
+	add_subdirectory(bind)
+endif()
 add_subdirectory(etc)
 add_subdirectory(mysql)
 add_subdirectory(nginx)
