[BUILD] We only care about Pale Moon right now

--- a/aura/configuration/mcp/CMakeLists.txt
+++ b/aura/configuration/mcp/CMakeLists.txt
@@ -2,6 +2,7 @@ mk_paths()
 
 file(MAKE_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${mk_relpath})
 
-add_subdirectory(fossamail)
 add_subdirectory(palemoon)
-add_subdirectory(productions)
+
+# add_subdirectory(fossamail)
+# add_subdirectory(productions)
