--- a/aura/templates/nginx/standard.vhost.in
+++ b/aura/templates/nginx/standard.vhost.in
@@ -7,7 +7,11 @@
 		access_log off;
 
 		location / {
+#ifdef NGX_ENABLE_CMSMS
+			try_files $uri $uri/ /index.php?page=$request_uri
+#else
 			try_files $uri/ $uri =404;
+#endif
 		}
 #ifdef NGX_ENABLE_PHP
 		location ~ \.php$ {
