[BUILD] Add user class for BinOC

--- a/aura/configuration/binoc/CMakeLists.txt
+++ b/aura/configuration/binoc/CMakeLists.txt
@@ -2,6 +2,10 @@ mk_paths()
 
 file(MAKE_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${mk_relpath})
 
+# Set the user class
+set(varUserClass "binoc")
+
+# Add subdirectories
 add_subdirectory(binocnetwork)
 
 if(varTargetServerQuartz)
