[CONFIG] Complete nginx for newtobinparadigm

--- a/aura/configuration/binoc/newtobinparadigm/CMakeLists.txt
+++ b/aura/configuration/binoc/newtobinparadigm/CMakeLists.txt
@@ -2,6 +2,10 @@ mk_paths()
 
 file(MAKE_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${mk_relpath})
 
+# Set information about this user
+set(varUserName "newtobinparadigm")
+
+# Add Subdirectories
 add_subdirectory(nginx)
 add_subdirectory(php)
 add_subdirectory(vsftpd)
