--- a/aura/templates/nginx/standard.vhost.in
+++ b/aura/templates/nginx/standard.vhost.in
@@ -1,5 +1,5 @@
 	server {
-		listen unix:/var/run/@AURA_USER_CLASS@-@AURA_USER_NAME@-nginx.socket;
+		listen unix:/var/run/aura-@AURA_USER_CLASS@-@AURA_USER_NAME@-nginx.socket;
 		server_name	@NGX_DOMAIN@;
 		root /aura/accounts/@AURA_USER_CLASS@/@AURA_USER_NAME@/sites/@NGX_ROOTDOMAIN@/@NGX_SUBDOMAIN@;
 		index index.htm index.html index.php;
