[BUILD] Add an Aura Level/Version number.. Why? Why not!

--- a/aura/CMakeLists.txt
+++ b/aura/CMakeLists.txt
@@ -1,6 +1,10 @@
 mk_paths()
 
 # Set variables about the build
+
+### Set some nifty vars
+set(varTargetAuraVersion "4.0a1")
+
 ### Which configuration do we build?
 set(varTargetServerQuartz 1)
 set(varTargetServerRegolith)
