--- a/aura/templates/nginx/nginx.service.in
+++ b/aura/templates/nginx/nginx.service.in
@@ -9,7 +9,7 @@ PIDFile=/var/run/aura-@AURA_USER_CLASS@-@AURA_USER_NAME@-nginx.pid
 #ifdef NGX_GLOBAL
 ExecStartPre=/usr/sbin/nginx -t -c /aura/configuration/@AURA_USER_CLASS@/nginx/nginx.conf
 ExecStart=/usr/sbin/nginx -c /aura/configuration/@AURA_USER_CLASS@/nginx/nginx.conf
-#elif
+#else
 ExecStartPre=/usr/sbin/nginx -t -c /aura/configuration/@AURA_USER_CLASS@/@AURA_USER_NAME@/nginx/nginx.conf ; -/bin/rm -f /var/run/aura-@AURA_USER_CLASS@-@AURA_USER_NAME@-nginx.socket
 ExecStart=/usr/sbin/nginx -c /aura/configuration/@AURA_USER_CLASS@/@AURA_USER_NAME@/nginx/nginx.conf
 #endif
