--- a/aura/configuration/system/nginx/CMakeLists.txt
+++ b/aura/configuration/system/nginx/CMakeLists.txt
@@ -8,4 +8,8 @@ pyPreprocess(${mk_depth}/aura/templates/nginx/nginx.service.in aura-${varUserCla
 # Userscope Nginx Server Instance
 pyPreprocess(${mk_depth}/aura/templates/nginx/nginx.conf.in nginx.conf -Fsubstitution -DAURA_VERSION="${varTargetAuraVersion}" -DAURA_IPV4="${varSystemIPv4}" -DAURA_IPV6="${varSystemIPv6}" -DAURA_USER_CLASS="${varUserClass}" -DAURA_USER_NAME="${varUserName}" -DNGX_GLOBAL)
 
+# Use pyPreprocess to copy files (This would be better served by another function but I want this to happen in 'build time' instead of 'configure time')
+pyPreprocess(mime-types.inc mime-types.inc)
+pyPreprocess(standard-php.inc standard-php.inc)
+
 add_subdirectory(certs)
