[CONFIG] Enable nginx for royalgeekworld

--- a/aura/configuration/binoc/royalgeekworld/nginx/CMakeLists.txt
+++ b/aura/configuration/binoc/royalgeekworld/nginx/CMakeLists.txt
@@ -1,3 +1,29 @@
 mk_paths()
 
 file(MAKE_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${mk_relpath})
+
+# Userscope Nginx systemd Service
+pyPreprocess(${mk_depth}/aura/templates/nginx/nginx.service.in aura-${varUserClass}-${varUserName}-nginx.service -Fsubstitution -DAURA_VERSION="${varTargetAuraVersion}" -DAURA_USER_CLASS="${varUserClass}" -DAURA_USER_NAME="${varUserName}")
+
+# Userscope Nginx Server Instance
+pyPreprocess(${mk_depth}/aura/templates/nginx/nginx.conf.in nginx.conf -Fsubstitution -DAURA_VERSION="${varTargetAuraVersion}" -DAURA_IPV4="${varSystemIPv4}" -DAURA_IPV6="${varSystemIPv6}" -DAURA_USER_CLASS="${varUserClass}" -DAURA_USER_NAME="${varUserName}")
+
+# Proxy file for royalgeekworld.com
+set(varDomain "royalgeekworld.com")
+pyPreprocess(${mk_depth}/aura/templates/nginx/standard.proxy.in www.${varDomain}.proxy -Fsubstitution -DAURA_VERSION="${varTargetAuraVersion}" -DAURA_IPV4="${varSystemIPv4}" -DAURA_IPV6="${varSystemIPv6}" -DAURA_USER_CLASS="${varUserClass}" -DAURA_USER_NAME="${varUserName}" -DNGX_DOMAIN="${varDomain}" -DNGX_MAINDOMAIN=1)
+
+# VHOST for royalgeekworld.com
+set(varSubdomain "www")
+set(varRootDomain "royalgeekworld.com")
+set(varDomain ${varRootDomain})
+pyPreprocess(${mk_depth}/aura/templates/nginx/standard.vhost.in www.${varDomain}.vhost -Fsubstitution -DAURA_VERSION="${varTargetAuraVersion}" -DAURA_USER_CLASS="${varUserClass}" -DAURA_USER_NAME="${varUserName}" -DNGX_DOMAIN="${varDomain}" -DNGX_ROOTDOMAIN="${varRootDomain}" -DNGX_SUBDOMAIN="${varSubdomain}" -DNGX_ENABLE_PHP=1)
+
+# Proxy file for ccfans.royalgeekworld.com
+set(varDomain "ccfans.royalgeekworld.com")
+pyPreprocess(${mk_depth}/aura/templates/nginx/standard.proxy.in ${varDomain}.proxy -Fsubstitution -DAURA_VERSION="${varTargetAuraVersion}" -DAURA_IPV4="${varSystemIPv4}" -DAURA_IPV6="${varSystemIPv6}" -DAURA_USER_CLASS="${varUserClass}" -DAURA_USER_NAME="${varUserName}" -DNGX_DOMAIN="${varDomain}")
+
+# VHOST for ccfans.royalgeekworld.com
+set(varSubdomain "ccfans")
+set(varRootDomain "royalgeekworld.com")
+set(varDomain "${varSubdomain}.${varRootDomain}")
+pyPreprocess(${mk_depth}/aura/templates/nginx/standard.vhost.in ${varDomain}.vhost -Fsubstitution -DAURA_VERSION="${varTargetAuraVersion}" -DAURA_USER_CLASS="${varUserClass}" -DAURA_USER_NAME="${varUserName}" -DNGX_DOMAIN="${varDomain}" -DNGX_ROOTDOMAIN="${varRootDomain}" -DNGX_SUBDOMAIN="${varSubdomain}" -DNGX_ENABLE_PHP=1)
