--- a/aura/templates/nginx/standard.vhost.in
+++ b/aura/templates/nginx/standard.vhost.in
@@ -16,14 +16,14 @@
 		location @404 { return 404; }
 		location / {
 #ifdef NGX_ENABLE_CMSMS
-			try_files $uri $uri/ /index.php?page=$request_uri =404
+			try_files $uri $uri/ /index.php?page=$request_uri =404;
 #else
 			try_files $uri/ $uri =404;
 #endif
 		}
 #ifdef NGX_ENABLE_PHP
 		location ~ \.php$ {
-			include /aura/configuration/system/nginx/standard-php.inc
+			include /aura/configuration/system/nginx/standard-php.inc;
 			fastcgi_pass unix:/var/run/aura-@AURA_USER_CLASS@-@AURA_USER_NAME@-php.socket;
 		}
 #endif
