--- a/aura/configuration/binoc/newtobinparadigm/php/CMakeLists.txt
+++ b/aura/configuration/binoc/newtobinparadigm/php/CMakeLists.txt
@@ -1,3 +1,7 @@
 mk_paths()
 
 file(MAKE_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${mk_relpath})
+file(MAKE_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${mk_relpath}/session)
+
+# php-fpm pool config
+pyPreprocess(${mk_depth}/aura/templates/php/php-pool.conf.in php-pool.conf -Fsubstitution -DAURA_USER_CLASS="${varUserClass}" -DAURA_USER_NAME="${varUserName}")
