--- a/aura/templates/php/php.service.in
+++ b/aura/templates/php/php.service.in
@@ -4,7 +4,7 @@ After=syslog.target network.target
 
 [Service]
 Type=notify
-PIDFile=/var/run/aura-system-php.pid
+PIDFile=/var/run/aura-@AURA_USER_CLASS@-@AURA_USER_NAME@-php.pid
 ExecStart=/usr/sbin/php-fpm --nodaemonize -c /aura/configuration/system/php --fpm-config  /aura/configuration/system/php/php.conf
 ExecReload=/bin/kill -USR2 $MAINPID
 PrivateTmp=true
