--- a/aura/configuration/system/bind/named.inc.in
+++ b/aura/configuration/system/bind/named.inc.in
@@ -1,9 +1,29 @@
+zone "binocnetwork.com" {
+	type master;
+	file "/@BIND_CONF_PREFIX@/binocnetwork.com.zone";
+};
+
 zone "binocglobal.com" {
 	type master;
-	file	"/aura/accounts/binoc/binaryoutcast/config/bind/binocglobal.com.zone";
+	file "/@BIND_CONF_PREFIX@/binocglobal.com.zone";
 };
 
 zone "binaryoutcast.com" {
 	type master;
-	file	"/aura/accounts/binoc/binaryoutcast/config/bind/binaryoutcast.com.zone";
+	file "/@BIND_CONF_PREFIX@/binaryoutcast.com.zone";
+};
+
+zone "mattatobin.com" {
+	type master;
+	file "/@BIND_CONF_PREFIX@/mattatobin.com.zone";
+};
+
+zone "royalgeekworld.com" {
+	type master;
+	file "/@BIND_CONF_PREFIX@/royalgeekworld.com.zone";
+};
+
+zone "royalgeekworld.net" {
+	type master;
+	file "/@BIND_CONF_PREFIX@/royalgeekworld.net.zone";
 };
