--- a/aura/configuration/system/bind/CMakeLists.txt
+++ b/aura/configuration/system/bind/CMakeLists.txt
@@ -7,6 +7,9 @@ set(varBindNS1 "ns1.binocnetwork.com")
 set(varBindNS2 "ns2.binocnetwork.com")
 set(varBindConfPrefix "aura/configuration/system/bind")
 
+# BIND Service
+pyPreprocess(bind.service.in aura-${varUserClass}-${varUserName}-bind.service -Fsubstitution -DAURA_USER_CLASS="${varUserClass}" -DAURA_USER_NAME="${varUserName}" -DBIND_CONF_PREFIX="${varBindConfPrefix}")
+
 # Preprocess Main BIND Files
 pyPreprocess(named.conf.in named.conf -Fsubstitution -DBIND_CONF_PREFIX="${varBindConfPrefix}")
 pyPreprocess(named.inc.in named.inc -Fsubstitution -DBIND_CONF_PREFIX="${varBindConfPrefix}")
