Add a configured header....PART 2

--- a/aura/templates/nginx/standard.proxy.in
+++ b/aura/templates/nginx/standard.proxy.in
@@ -18,4 +18,6 @@
 			proxy_set_header X-Real-IP $remote_addr;
 		}
 		add_header X-BinOC configured=true always;
+		add_header X-BinOC platform=aura always;
+		add_header X-BinOC level=@AURA_VERSION@ always;
 	}
