--- a/aura/configuration/binoc/binaryoutcast/nginx/techcentral.binaryoutcast.com.vhost.in
+++ b/aura/configuration/binoc/binaryoutcast/nginx/techcentral.binaryoutcast.com.vhost.in
@@ -9,6 +9,7 @@
 		location ~* /wp-login.php {
 			auth_basic "Binary Outcast Security Protocol Alpha One Nine Two Five";
 			auth_basic_user_file /aura/configuration/@AURA_USER_CLASS@/@AURA_USER_NAME@/nginx/user/wpadmin.passwd;
+			try_files $uri =404;
 			include /aura/configuration/system/nginx/standard-php.inc;
 			fastcgi_pass unix:/var/run/aura-@AURA_USER_CLASS@-@AURA_USER_NAME@-php.socket;
 		}
