--- a/aura/configuration/binoc/binaryoutcast/nginx/www.binaryoutcast.com.vhost.in
+++ b/aura/configuration/binoc/binaryoutcast/nginx/www.binaryoutcast.com.vhost.in
@@ -7,7 +7,7 @@
 		access_log off;
 		location @404 { return 404; }
 		location / {
-			try_files $uri $uri/ /index.php?page=$request_uri =404;
+			try_files $uri $uri/ /index.php?page=$request_uri;
 		}
 		location ~ \.php$ {
 			include /aura/configuration/system/nginx/standard-php.inc;
