Resolve standing issues with the X-BinOC http header

--- a/aura/configuration/binoc/binaryoutcast/nginx/www.binaryoutcast.com.vhost.in
+++ b/aura/configuration/binoc/binaryoutcast/nginx/www.binaryoutcast.com.vhost.in
@@ -19,4 +19,5 @@
 		location /software/projects/pm4xp {
 			return 302 http://binaryoutcast.com/projects/pm4xp/;
 		}
+		add_header X-BinOC socket=true always;
 	}
