Finish VSFTPd for newtobinparadigm

--- a/aura/configuration/binoc/newtobinparadigm/vsftpd/vsftpd.conf
+++ b/aura/configuration/binoc/newtobinparadigm/vsftpd/vsftpd.conf
@@ -24,7 +24,7 @@ userlist_enable=YES
 # specifies a home directory for each virtual user
 #user_sub_token=$USER
 local_root=/aura/accounts/binoc/newtobinparadigm
-user_config_dir=/aura/accounts/binoc/newtobinparadigm/.vsftpd/users
+user_config_dir=/aura/configuration/binoc/newtobinparadigm/vsftpd/users
 #anon_root=/var/www/ftp
 
 # the virtual user is restricted to the virtual FTP area
