[PHP] Allow multiple versions of PHP to be used and set almost everyone on PHP 5.6

--- a/aura/configuration/binoc/binaryoutcast/nginx/techcentral.binaryoutcast.com.vhost.in
+++ b/aura/configuration/binoc/binaryoutcast/nginx/techcentral.binaryoutcast.com.vhost.in
@@ -12,13 +12,7 @@
 		}
 		location ~ \.php$ {
 			include /aura/configuration/system/nginx/standard-php.inc;
-			fastcgi_pass unix:/var/run/aura-@AURA_USER_CLASS@-@AURA_USER_NAME@-php.socket;
-		}
-		location ~* /techcentral/(.*) {
-			return 302 http://techcentral.binaryoutcast.com/$1;
-		}
-		location /software/projects/pm4xp {
-			return 302 http://binaryoutcast.com/projects/pm4xp/;
+			fastcgi_pass unix:/var/run/aura-@AURA_USER_CLASS@-@AURA_USER_NAME@-php70.socket;
 		}
 		add_header X-BinOC socket=true always;
 	}
