--- a/aura/configuration/binoc/binocnetwork/nginx/CMakeLists.txt
+++ b/aura/configuration/binoc/binocnetwork/nginx/CMakeLists.txt
@@ -36,4 +36,4 @@ elseif(varTargetServerRegolith)
 endif()
 set(varRootDomain "binocnetwork.com")
 set(varDomain "${varSubdomain}.${varRootDomain}")
-pyPreprocess(${mk_depth}/aura/templates/nginx/standard.vhost.in ${varDomain}.vhost -Fsubstitution -DAURA_VERSION="${varTargetAuraVersion}" -DAURA_USER_CLASS="${varUserClass}" -DAURA_USER_NAME="${varUserName}" -DNGX_DOMAIN="${varDomain}" -DNGX_ROOTDOMAIN="${varRootDomain}" -DNGX_SUBDOMAIN="${varSubdomain}" -DNGX_OVERRIDE_SUBDOMAIN="operations" -DNGX_ENABLE_PHP=1)
+pyPreprocess(${mk_depth}/aura/templates/nginx/standard.vhost.in ${varDomain}.vhost -Fsubstitution -DAURA_VERSION="${varTargetAuraVersion}" -DAURA_USER_CLASS="${varUserClass}" -DAURA_USER_NAME="${varUserName}" -DNGX_DOMAIN="${varDomain}" -DNGX_ROOTDOMAIN="${varRootDomain}" -DNGX_SUBDOMAIN="${varSubdomain}" -DNGX_OVERRIDE_SUBDOMAIN="operations" -DNGX_ENABLE_PHP=1 -DPHP_VERSION_56=1)
