--- a/aura/templates/php/php.service.in
+++ b/aura/templates/php/php.service.in
@@ -4,8 +4,16 @@ After=syslog.target network.target
 
 [Service]
 Type=notify
+#ifdef PHP_VERSION_56
+PIDFile=/var/run/aura-@AURA_USER_CLASS@-@AURA_USER_NAME@-php56.pid
+ExecStart=/opt/remi/php56/root/usr/sbin/php-fpm --nodaemonize -c /aura/configuration/system/php --fpm-config  /aura/configuration/system/php/php56.conf
+#elif PHP_VERSION_70
+PIDFile=/var/run/aura-@AURA_USER_CLASS@-@AURA_USER_NAME@-php70.pid
+ExecStart=/opt/remi/php70/root/usr/sbin/php-fpm --nodaemonize -c /aura/configuration/system/php --fpm-config  /aura/configuration/system/php/php70.conf
+#else
 PIDFile=/var/run/aura-@AURA_USER_CLASS@-@AURA_USER_NAME@-php.pid
 ExecStart=/usr/sbin/php-fpm --nodaemonize -c /aura/configuration/system/php --fpm-config  /aura/configuration/system/php/php.conf
+#endif
 ExecReload=/bin/kill -USR2 $MAINPID
 PrivateTmp=true
 
