Setup MCP -> palemoon on Aura and set addons.palemoon.org to PHP 5.6

--- a/aura/configuration/mcp/palemoon/CMakeLists.txt
+++ b/aura/configuration/mcp/palemoon/CMakeLists.txt
@@ -2,5 +2,8 @@ mk_paths()
 
 file(MAKE_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${mk_relpath})
 
+# Set information about this user
+set(varUserName "palemoon")
+
 add_subdirectory(nginx)
 add_subdirectory(php)
