Fix header on special case nginx vhost for addons.palemoon.org

--- a/aura/configuration/mcp/palemoon/nginx/addons.palemoon.org.vhost.in
+++ b/aura/configuration/mcp/palemoon/nginx/addons.palemoon.org.vhost.in
@@ -75,4 +75,5 @@
 			include /aura/configuration/system/nginx/standard-php.inc;
 			fastcgi_pass unix:/var/run/aura-@AURA_USER_CLASS@-@AURA_USER_NAME@-php56.socket;
 		}
+		add_header X-BinOC socket=true always;
 	}
